--- a/EasyLib_server/.gitignore
+++ b/EasyLib_server/.gitignore
@@ -68,3 +68,12 @@ fastlane/readme.md
 # Maven
 log/
 target/
+
+# Sensitive or high-churn files
+.idea/**/dataSources/
+.idea/**/dataSources.ids
+.idea/**/dataSources.local.xml
+.idea/**/sqlDataSources.xml
+.idea/**/dynamic.xml
+.idea/**/uiDesigner.xml
+.idea/**/dbnavigator.xml
