--- a/EasyLib_server/.gitignore
+++ b/EasyLib_server/.gitignore
@@ -69,7 +69,9 @@ fastlane/readme.md
 log/
 target/
 
+
 # Sensitive or high-churn files
+.idea/*
 .idea/**/dataSources/
 .idea/**/dataSources.ids
 .idea/**/dataSources.local.xml
