--- a/EasyLib_server/pom.xml
+++ b/EasyLib_server/pom.xml
@@ -47,5 +47,11 @@
       <version>5.1.46</version>
     </dependency>
 
+  <dependency>
+      <groupId>javax.mail</groupId>
+      <artifactId>mail</artifactId>
+      <version>1.4</version>
+  </dependency>
+
   </dependencies>
 </project>
