--- a/EasyLib/app/src/main/AndroidManifest.xml
+++ b/EasyLib/app/src/main/AndroidManifest.xml
@@ -23,8 +23,8 @@
 
         <service
             android:name=".ConnectionLayer.ConnectionService"
-            >
-        </service>
+            ></service>
+
     </application>
 
     
