--- a/EasyLib_server/pom.xml
+++ b/EasyLib_server/pom.xml
@@ -47,6 +47,12 @@
       <version>5.1.46</version>
     </dependency>
 
+      <dependency>
+          <groupId>com.microsoft.sqlserver</groupId>
+          <artifactId>mssql-jdbc</artifactId>
+          <version>6.2.1.jre8</version>
+      </dependency>
+
   <dependency>
       <groupId>javax.mail</groupId>
       <artifactId>mail</artifactId>
