--- a/EasyLib/app/src/main/AndroidManifest.xml
+++ b/EasyLib/app/src/main/AndroidManifest.xml
@@ -1,25 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.easylib.dima.easylib">
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <supports-screens
-        android:smallScreens="false"
-        android:normalScreens="true"
         android:largeScreens="true"
+        android:normalScreens="true"
+        android:smallScreens="false"
         android:xlargeScreens="true" />
 
     <application
         android:name="android.support.multidex.MultiDexApplication"
         android:allowBackup="true"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:hardwareAccelerated="true">
-        <activity android:name=".Login.Login"
+        android:theme="@style/AppTheme">
+        <activity
+            android:name=".Login.Login"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,17 +29,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Main.MainActivity"
-            android:screenOrientation="portrait"></activity>
-        <activity android:name=".Login.Register"
-            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".Main.MainActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Login.Register"
+            android:screenOrientation="portrait" />
 
-        <service
-            android:name=".ConnectionLayer.ConnectionService"
-            ></service>
+        <service android:name=".ConnectionLayer.ConnectionService" />
 
+        <activity android:name=".Login.LoginPreference"></activity>
     </application>
-
-    
 
 </manifest>
