--- a/EasyLib/app/build.gradle
+++ b/EasyLib/app/build.gradle
@@ -42,6 +42,12 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:16.1.0'
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
     implementation 'com.android.support:multidex:1.0.3'
+
+    // glide image library
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+
+    // volley http library
+    implementation 'com.android.volley:volley:1.0.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
