Implemented Search Activity
- search and search_item layouts
- search class and searchAdapter class
- toptoolbar background image
- change performSearch method on MainCativity

--- a/EasyLib/app/src/main/AndroidManifest.xml
+++ b/EasyLib/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
         <service android:name=".ConnectionLayer.ConnectionService" />
 
         <activity android:name=".Login.LoginPreference"></activity>
+        <activity android:name=".Search.Search" />
     </application>
 
 </manifest>
