--- a/EasyLib/app/build.gradle
+++ b/EasyLib/app/build.gradle
@@ -46,8 +46,7 @@ dependencies {
     // glide image library
     implementation 'com.github.bumptech.glide:glide:3.7.0'
 
-    // volley http library
-    implementation 'com.android.volley:volley:1.0.0'
+    implementation 'com.makeramen:roundedimageview:2.3.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
