Added a lot of Graphical features
- theme to make transparent background activities
- "pop-up" secondary activities
- fade_in & fade_out on activity appear and disappear
- ic_adv_filter_search

--- a/EasyLib/app/src/main/AndroidManifest.xml
+++ b/EasyLib/app/src/main/AndroidManifest.xml
@@ -35,12 +35,17 @@
             android:hardwareAccelerated="true"/>
         <activity
             android:name=".Login.Register"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.TransparentWindow"/>
 
         <service android:name=".ConnectionLayer.ConnectionService" />
 
-        <activity android:name=".Login.LoginPreference"></activity>
-        <activity android:name=".Search.Search" />
+        <activity android:name=".Login.LoginPreference"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.TransparentWindow"/>
+        <activity android:name=".Search.Search"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.TransparentWindow"/>
     </application>
 
 </manifest>
