--- a/EasyLib/app/build.gradle
+++ b/EasyLib/app/build.gradle
@@ -46,7 +46,11 @@ dependencies {
     // glide image library
     implementation 'com.github.bumptech.glide:glide:3.7.0'
 
+    // for round corners images
     implementation 'com.makeramen:roundedimageview:2.3.0'
+
+    // for swipeback on layouts
+    implementation 'com.gongwen:swipeback:1.0.2'
 }
 
 apply plugin: 'com.google.gms.google-services'
