--- a/EasyLib/app/src/main/AndroidManifest.xml
+++ b/EasyLib/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".Login.Login"
+            android:name=".Activities.Login.Login"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,18 +30,18 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Main.MainActivity"
+            android:name=".Activities.Fragments.MainActivity"
             android:screenOrientation="portrait"
             android:hardwareAccelerated="true"/>
         <activity
-            android:name=".Login.Register"
+            android:name=".Activities.Login.Register"
             android:theme="@style/AppTheme.TransparentWindow"/>
 
         <service android:name=".ConnectionLayer.ConnectionService" />
 
-        <activity android:name=".Login.LoginPreference"
+        <activity android:name=".Activities.Login.LoginPreference"
             android:theme="@style/AppTheme.TransparentWindow"/>
-        <activity android:name=".Search.Search"
+        <activity android:name=".Activities.Search"
             android:theme="@style/AppTheme.TransparentWindow"/>
     </application>
 
