--- a/EasyLib/app/build.gradle
+++ b/EasyLib/app/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
     implementation 'com.android.support:multidex:1.0.3'
 
+    //Firebase notification
+    implementation 'com.google.firebase:firebase-messaging:17.3.4'
     // glide image library
     implementation 'com.github.bumptech.glide:glide:3.7.0'
 
