--- a/EasyLib_server/pom.xml
+++ b/EasyLib_server/pom.xml
@@ -59,5 +59,12 @@
       <version>1.4</version>
   </dependency>
 
+      <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+      <dependency>
+          <groupId>org.apache.httpcomponents</groupId>
+          <artifactId>httpclient</artifactId>
+          <version>4.5.6</version>
+      </dependency>
+
   </dependencies>
 </project>
