--- a/EasyLib/app/src/main/AndroidManifest.xml
+++ b/EasyLib/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_channel_id"
             android:value="@string/default_notification_channel_id" />
+
         <activity
             android:name=".Activities.Login.LoginActivity"
             android:screenOrientation="portrait">
@@ -57,6 +58,8 @@
         <activity android:name=".Activities.RatedBooksActivity"
             android:theme="@style/AppTheme.TransparentWindow"/>
         <activity android:name=".Activities.EventActivity"
+            android:theme="@style/AppTheme.TransparentWindow"/>
+        <activity android:name=".Activities.NewsActivity"
             android:theme="@style/AppTheme.TransparentWindow"/>
 
         <service android:name=".ConnectionLayer.Notifications.MyFirebaseMessagingService">
