--- a/EasyLib_server/pom.xml
+++ b/EasyLib_server/pom.xml
@@ -66,5 +66,16 @@
           <version>4.5.6</version>
       </dependency>
 
+          <dependency>
+              <groupId>com.google.zxing</groupId>
+              <artifactId>core</artifactId>
+              <version>3.3.0</version>
+          </dependency>
+          <dependency>
+              <groupId>com.google.zxing</groupId>
+              <artifactId>javase</artifactId>
+              <version>3.3.0</version>
+          </dependency>
+
   </dependencies>
 </project>
