--- a/EasyLib/app/src/main/AndroidManifest.xml
+++ b/EasyLib/app/src/main/AndroidManifest.xml
@@ -36,8 +36,7 @@
         </activity>
         <activity
             android:name=".Activities.Fragments.MainActivity"
-            android:screenOrientation="portrait"
-            android:hardwareAccelerated="true"/>
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".Activities.Login.RegisterActivity"
             android:theme="@style/AppTheme.TransparentWindow"/>
