--- a/EasyLib_Librarian/app/build.gradle
+++ b/EasyLib_Librarian/app/build.gradle
@@ -4,8 +4,9 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.easylib.dima.easylib_librarian"
-        minSdkVersion 21
+        minSdkVersion 19
         targetSdkVersion 28
+        multiDexEnabled true
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -33,5 +34,10 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation files('libs/library_jar.jar')
     implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.android.support:multidex:1.0.3'
+
+    // for round corners images
+    implementation 'com.makeramen:roundedimageview:2.3.0'
 
 }
