[LIB] Created Book Activity
- activity
- items for reservations
- adapter for reservations

--- a/EasyLib_Librarian/app/src/main/AndroidManifest.xml
+++ b/EasyLib_Librarian/app/src/main/AndroidManifest.xml
@@ -19,5 +19,6 @@
         </activity>
 
         <activity android:name=".Activities.LibraryActivity"/>
+        <activity android:name=".Activities.BookActivity"/>
     </application>
 </manifest>
