--- a/EasyLib/app/build.gradle
+++ b/EasyLib/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:16.1.0'
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
     implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.google.android.gms:play-services-vision:11.6.0'
 
     //Firebase notification
     implementation 'com.google.firebase:firebase-messaging:17.3.4'
