--- a/EasyLib/app/build.gradle
+++ b/EasyLib/app/build.gradle
@@ -54,6 +54,8 @@ dependencies {
 
     // for swipeback on layouts
     implementation 'com.gongwen:swipeback:1.0.2'
+    implementation 'com.journeyapps:zxing-android-embedded:3.0.2@aar'
+    implementation 'com.google.zxing:core:3.2.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
