--- a/EasyLib_Librarian/app/build.gradle
+++ b/EasyLib_Librarian/app/build.gradle
@@ -40,4 +40,7 @@ dependencies {
     // for round corners images
     implementation 'com.makeramen:roundedimageview:2.3.0'
 
+    // for QRcode
+    implementation 'com.journeyapps:zxing-android-embedded:3.0.2@aar'
+    implementation 'com.google.zxing:core:3.2.0'
 }
