--- a/EasyLib/app/src/main/AndroidManifest.xml
+++ b/EasyLib/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
 
 
     <application
-        android:name="com.easylib.dima.easylib.ConnectionLayer.MyApplication"
+        android:name=".ConnectionLayer.MyApplication"
         android:allowBackup="true"
         android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
