- changes on notifications

--- a/EasyLib_server/pom.xml
+++ b/EasyLib_server/pom.xml
@@ -53,11 +53,11 @@
           <version>6.2.1.jre8</version>
       </dependency>
 
-  <dependency>
-      <groupId>javax.mail</groupId>
-      <artifactId>mail</artifactId>
-      <version>1.4</version>
-  </dependency>
+          <dependency>
+              <groupId>com.sun.mail</groupId>
+              <artifactId>javax.mail</artifactId>
+              <version>1.6.2</version>
+          </dependency>
 
       <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
       <dependency>
