--- a/EasyLib/app/build.gradle
+++ b/EasyLib/app/build.gradle
@@ -59,6 +59,8 @@ dependencies {
     implementation 'com.journeyapps:zxing-android-embedded:3.0.2@aar'
     implementation 'com.google.zxing:core:3.2.0'
 
+    // include gson
+    implementation 'com.google.code.gson:gson:2.8.2'
 }
 
 apply plugin: 'com.google.gms.google-services'
